Agregando Div y Diseño al resumen

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
       </div>
     </div>
 
-    <h2 class="mt-4">Resumen</h2>
-    <p>Apasionado estudiante y próximo desarrollador web con experiencia en HTML, CSS y JavaScript. En busca de oportunidades desafiantes para aplicar mis habilidades y contribuir al éxito de un equipo.</p>
+    <div class="container bg-dark">
+      <h2 class="mt-4 text-center text-white">Resumen</h2>
+      <p class="text-center text-mute text-white">Apasionado estudiante y próximo desarrollador web con experiencia en HTML, CSS y JavaScript. En busca de oportunidades desafiantes para aplicar mis habilidades y contribuir al éxito de un equipo.</p>
+    </div>
+
+    
 
     <h2 id="experiencia" class="mt-4">Experiencia Laboral</h2>
     <ul>
